Add array for additional grub boot loaders

--- a/cryptboot.conf
+++ b/cryptboot.conf
@@ -17,6 +17,10 @@ EFI_ID_GRUB="GRUB"
 # Path to GRUB boot loader EFI file (relative to EFI System partition)
 EFI_PATH_GRUB="EFI/GRUB/grubx64.efi"
 
+# Path to additional GRUB boot loaders (fex. if using grub-install --removable)
+## format: ("a" "b" "...")
+ADDITIONAL_EFI_PATH_GRUB=("EFI/BOOT/BOOTX64.EFI")
+
 # UEFI Secure Boot keys directory
 EFI_KEYS_DIR="/etc/secureboot/keys"
 
