--- a/cryptboot.conf
+++ b/cryptboot.conf
@@ -1,15 +1,12 @@
-# Boot directory (has to be specified in /etc/fstab)
-BOOT_DIR="/boot"
-
 # EFI System partition mount point (has to be specified in /etc/fstab)
 EFI_DIR="/efi"
 
 # Path to boot loader EFI file (relative to EFI_DIR)
-EFI_PATH="EFI/GRUB/grubx64.efi"
+EFI_PATH="EFI/BOOT/BOOTX64.EFI"
 
 # Path to additional boot loaders
 ## format: ("a" "b" "...")
-ADDITIONAL_EFI_PATH=("EFI/BOOT/BOOTX64.EFI")
+ADDITIONAL_EFI_PATH=("EFI/systemd/systemd-bootx64.efi")
 
 # UEFI Secure Boot keys directory
 EFI_KEYS_DIR="/etc/secureboot/keys"
