--- a/cryptboot.conf
+++ b/cryptboot.conf
@@ -2,11 +2,12 @@
 EFI_DIR="/efi"
 
 # Path to boot loader EFI file (relative to EFI_DIR)
-EFI_PATH="EFI/BOOT/BOOTX64.EFI"
+## format: ("a" "b")
+EFI_PATHS=("EFI/systemd/systemd-bootx64.efi" "EFI/BOOT/BOOTX64.EFI")
 
-# Path to additional boot loaders
-## format: ("a" "b" "...")
-ADDITIONAL_EFI_PATH=("EFI/systemd/systemd-bootx64.efi")
+# Path to kernel images
+## format: ("a" "b")
+KERNEL_PATHS=("EFI/Linux")
 
 # UEFI Secure Boot keys directory
 EFI_KEYS_DIR="/etc/secureboot/keys"
