Restructure program and add comments

--- a/cryptboot.conf
+++ b/cryptboot.conf
@@ -1,13 +1,9 @@
 # EFI System partition mount point (has to be specified in /etc/fstab)
 EFI_DIR="/efi"
 
-# Path to boot loader EFI file (relative to EFI_DIR)
+# List of paths with images to sign
 ## format: ("a" "b")
-EFI_PATHS=("EFI/systemd/systemd-bootx64.efi" "EFI/BOOT/BOOTX64.EFI")
-
-# Path to kernel images
-## format: ("a" "b")
-KERNEL_PATHS=("EFI/Linux")
+TO_SIGN=("EFI/Linux" "EFI/systemd" "EFI/BOOT")
 
 # UEFI Secure Boot keys directory
 EFI_KEYS_DIR="/etc/secureboot/keys"
