Modify comment for ENABLE_OPROM

--- a/cryptboot.conf
+++ b/cryptboot.conf
@@ -10,5 +10,9 @@ EFI_KEYS_DIR="/etc/secureboot/keys"
 
 # Option ROM
 ## See: https://github.com/Foxboron/sbctl/wiki/FAQ#option-rom
-##      Setting ENABLE_OPROM="false" might soft brick your device. Make sure that your hardware doesn't need oproms.
+##      Setting ENABLE_OPROM="false" might soft brick your device. Make sure that your hardware doesn't need oproms
+## If you plan on changing this setting after enrolling, you will have to issue the following commands again:
+##     cryptboot-efikeys create
+##     cryptboot-efikeys enroll
+##     cryptboot systemd-boot-sign
 ENABLE_OPROM="true"
