--- a/cryptboot.conf
+++ b/cryptboot.conf
@@ -2,7 +2,7 @@
 EFI_DIR="/efi"
 
 # List of paths with images to sign
-## format: ("a" "b")
+## Format: ("a" "b")
 TO_SIGN=("EFI/Linux" "EFI/systemd" "EFI/BOOT")
 
 # UEFI Secure Boot keys directory
