Add arguments [PK.key] and [KEK.key] to enroll and change EFI_KEYS_DIR var

--- a/cryptboot.conf
+++ b/cryptboot.conf
@@ -6,13 +6,13 @@ EFI_DIR="/efi"
 TO_SIGN=("EFI/Linux" "EFI/systemd" "EFI/BOOT")
 
 # UEFI Secure Boot keys directory
-EFI_KEYS_DIR="/etc/secureboot/keys"
+EFI_KEYS_DIR="/etc/secureboot"
 
 # Option ROM
 ## See: https://github.com/Foxboron/sbctl/wiki/FAQ#option-rom
 ##      Setting ENABLE_OPROM="false" might soft brick your device. Make sure that your hardware doesn't need oproms
 ## If you plan on changing this setting after enrolling, you will have to issue the following commands again:
 ##     cryptboot-efikeys create
-##     cryptboot-efikeys enroll
+##     cryptboot-efikeys enroll [PK.key] [KEK.key]
 ##     cryptboot systemd-boot-sign
 ENABLE_OPROM="true"
